Add package information

--- a/src/Mousavi.Extensions.Configuration.SqlServer/Mousavi.Extensions.Configuration.SqlServer.csproj
+++ b/src/Mousavi.Extensions.Configuration.SqlServer/Mousavi.Extensions.Configuration.SqlServer.csproj
@@ -2,6 +2,8 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
+    <Authors>Morteza Mousavi</Authors>
+    <PackageDescription>A SQL Server provider for .NET configuration.</PackageDescription>
   </PropertyGroup>
 
   <ItemGroup>
