--- a/src/Mousavi.Extensions.Configuration.SqlServer/Mousavi.Extensions.Configuration.SqlServer.csproj
+++ b/src/Mousavi.Extensions.Configuration.SqlServer/Mousavi.Extensions.Configuration.SqlServer.csproj
@@ -4,6 +4,7 @@
     <TargetFramework>netcoreapp3.1</TargetFramework>
     <Authors>Morteza Mousavi</Authors>
     <PackageDescription>A SQL Server provider for .NET configuration.</PackageDescription>
+    <ProjectUrl>https://github.com/Mousavi310/Mousavi.Extensions.Configuration.SqlServer</ProjectUrl>
   </PropertyGroup>
 
   <ItemGroup>
